--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,9 @@ body {
     padding: 0;
     margin: 0;
 }
-
+button {
+    font-family: 'Cinzel', serif;
+}
 li {
     list-style: none;
 }
@@ -41,7 +43,17 @@ h1 {
     width: 400px;
 
 }
+h2 {
+    font-size: 3em;
+    line-height: 1.1;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 80px auto;
+    width: 800px;
 
+}
 @media (prefers-color-scheme: light) {
     :root {
         color: #213547;
