--- a/src/ui/common_css/mainStyles.module.css
+++ b/src/ui/common_css/mainStyles.module.css
@@ -18,3 +18,10 @@
     justify-content: space-around;
     align-items: center;
 }
+.flexC {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
