--- a/src/ui/components/statistics/Statistics.module.css
+++ b/src/ui/components/statistics/Statistics.module.css
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
     height: auto;
-    background-image: url('public/dark.webp');
+    background-image: url('../../../../public/dark.webp');
     background-size: cover;
 }
