--- a/src/ui/components/small_components/animatedNumber/AnimatedNumber.module.css
+++ b/src/ui/components/small_components/animatedNumber/AnimatedNumber.module.css
@@ -4,7 +4,7 @@
     font-size: 76px;
     padding: 15px;
 }
-.container {
+.container  {
     background-color: rgba(0,0,0,0.6);
     border-radius: 20px;
     min-width: 230px;
@@ -13,6 +13,9 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+}
+.containerCopy {
+    background-color: transparent;
 }
 
 .span {
