--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@
     margin: 0;
     padding: 0;
     background-color: black;
-
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     scroll-behavior: smooth;
+
 
 }
 
@@ -28,6 +28,7 @@ body {
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
+    background-color: black;
 }
 button {
     font-family: 'Cinzel', serif;
@@ -56,18 +57,4 @@ h2 {
     margin: 80px auto;
     width: 800px;
 
-}
-@media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-
-    a:hover {
-        color: #747bff;
-    }
-
-    button {
-        background-color: #f9f9f9;
-    }
 }
