phone adaptive pt one

--- a/src/ui/components/header/header.module.css
+++ b/src/ui/components/header/header.module.css
@@ -19,3 +19,39 @@
         margin-left: 50px;
     }
 }
+
+@media (max-width: 1200px) {
+
+}
+@media (max-width: 800px) {
+    .ul {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        height: 100%;
+        position: absolute;
+        padding-left: 0;
+        top: 0;
+        right: -100%;
+        margin-top: 0;
+        z-index: 0;
+        li {
+            margin-left: 0;
+
+        }
+        a {
+            color: darkolivegreen;
+            font-size: 50px;
+        }
+    }
+    .ul.active {
+        right: 0;
+  }
+
+}
+@media (max-width: 760px) {
+
+}
+@media (max-width: 480px) {}
