--- a/src/ui/components/hobbies/activities/Activities.module.css
+++ b/src/ui/components/hobbies/activities/Activities.module.css
@@ -17,3 +17,14 @@
     flex-direction: row;
     justify-content: space-between;
 }
+@media (max-width: 800px) {
+    .span {
+        font-size: 0.8rem;
+    }
+    .h3 {
+        font-size: 1.2rem;
+    }
+    .ul {
+        padding-left: 0;
+    }
+}
