--- a/src/ui/components/main/main.module.css
+++ b/src/ui/components/main/main.module.css
@@ -12,3 +12,34 @@
 .main {
     height: 80%;
 }
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+@media (max-width: 800px) {
+    .container {
+        flex-direction: column;
+        justify-content: space-around;
+
+    }
+    .centerDiv {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .sideDiv {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        gap: 10px;
+
+    }
+}
