--- a/src/ui/components/small_components/social_medias/socials.module.css
+++ b/src/ui/components/small_components/social_medias/socials.module.css
@@ -12,3 +12,17 @@
 .link:hover {
     cursor: pointer;
 }
+
+@media (max-width: 1200px) {
+
+}
+@media (max-width: 800px) {
+    .mediaContainer {
+
+        flex-direction: row;
+    }
+}
+@media (max-width: 760px) {
+
+}
+@media (max-width: 480px) {}
