--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     scroll-behavior: smooth;
-
-
+    overflow-x: hidden;
+    width: 100%;
 }
 
 a {
@@ -29,6 +29,8 @@ body {
     margin: 0;
     scroll-behavior: smooth;
     background-color: black;
+    overflow-x: hidden;
+    width: 100%;
 }
 button {
     font-family: 'Cinzel', serif;
@@ -55,6 +57,24 @@ h2 {
     text-transform: uppercase;
     font-weight: bold;
     margin: 80px auto;
-    width: 800px;
+    max-width: 800px;
 
 }
+
+@media (max-width: 1200px) {
+
+}
+@media (max-width: 800px) {
+ h1 {
+     font-size: 3em;
+     margin: 0;
+     max-width: 300px;
+ }
+    h2 {
+        margin: 30px auto;
+    }
+}
+@media (max-width: 760px) {
+
+}
+@media (max-width: 480px) {}
