--- a/src/ui/common_css/mainStyles.module.css
+++ b/src/ui/common_css/mainStyles.module.css
@@ -28,3 +28,50 @@
 .color {
     color: white;
 }
+.show_big {
+    display: block;
+}
+.show_small {
+    display: none;
+}
+
+@media (max-width: 1200px) {
+    .container {
+        max-width: 1000px;
+    }
+    .show_big {
+        display: none;
+    }
+    .show_small {
+        display: block;
+    }
+}
+
+@media (max-width: 760px) {
+
+    .container {
+        max-width: 600px;
+    }
+    .show_big {
+        display: none;
+    }
+    .show_small {
+        display: block;
+    }
+    .flexR {
+        justify-content: start;
+    }
+
+}
+@media (max-width: 480px) {
+
+    .container {
+        max-width: 350px;
+    }
+    .show_big {
+        display: none;
+    }
+    .show_small {
+        display: block;
+    }
+}
