--- a/src/ui/components/countdown/Counter.module.css
+++ b/src/ui/components/countdown/Counter.module.css
@@ -23,3 +23,17 @@
     height: auto;
     margin-top: 70px;
 }
+.flexR {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+@media (max-width: 800px) {
+   .flexR{
+       flex-direction: column;
+   }
+    .flex {
+        flex-direction: column;
+    }
+}
