--- a/src/ui/components/footer/Footer.module.css
+++ b/src/ui/components/footer/Footer.module.css
@@ -15,3 +15,10 @@
     height: 50px;
     margin-left: 30px;
 }
+@media (max-width: 800px) {
+   .footer {
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+   }
+}
