--- a/src/ui/components/small_components/buttons/main_button/MainButton.module.css
+++ b/src/ui/components/small_components/buttons/main_button/MainButton.module.css
@@ -19,3 +19,17 @@
         font-size: 20px;
     }
 }
+
+@media (max-width: 800px) {
+  .container {
+      width: 100px;
+      height: 60px;
+      span {
+          font-size: 15px;
+      }
+      img {
+          width: 30px;
+          height: 30px;
+      }
+  }
+}
