--- a/src/ui/components/header/header.module.css
+++ b/src/ui/components/header/header.module.css
@@ -25,31 +25,38 @@
 }
 @media (max-width: 800px) {
     .ul {
-        display:flex;
+        display: none;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         background-color: white;
-        height: 100%;
-        position: absolute;
+        height: 100vh;
+        width: 100%;
+        position: fixed;
         padding-left: 0;
         top: 0;
         right: -100%;
         margin-top: 0;
-        z-index: 0;
+        z-index: 100;
+        transition: right 0.3s ease-in-out;
+    }
+
+    .ul.active {
+        display: flex !important;
+        right: 0;
         li {
             margin-left: 0;
-
-        }
-        a {
-            color: darkolivegreen;
-            font-size: 50px;
         }
     }
-    .ul.active {
-        right: 0;
-  }
 
+    li {
+        margin-left: 0;
+    }
+
+    a {
+        color: darkolivegreen;
+        font-size: 50px;
+    }
 }
 @media (max-width: 760px) {
 
