--- a/src/ui/components/small_components/buttons/main_button/MainButton.module.css
+++ b/src/ui/components/small_components/buttons/main_button/MainButton.module.css
@@ -31,5 +31,11 @@
           width: 30px;
           height: 30px;
       }
+      .span {
+          color: white;
+      }
+      .span:active {
+          color: darkolivegreen;
+      }
   }
 }
